tenzir/tests/ast/function_double_comma.txt
error: duplicate comma
 --> ast/function_double_comma.tql:4:9
  |
4 | a = b(c,,)
  |         ^ 
  |
